ASM-2825 Refactor: Remove unused Constants and add comprehensive unit tests for mappers and AWS Lambda configuration components